--- a/latex/references.bib
+++ b/latex/references.bib
@@ -2,89 +2,182 @@ Other references
 % Refererences on white paper
 % https://www.foleon.com/topics/how-to-write-and-format-a-white-paper
 
-@article{mitk-repo,
+Hannaford, Blake, Jacob Rosen, Diana W. Friedman, Hawkeye King, Phillip Roan, Lei Cheng, Daniel Glozman, Ji Ma, Sina Nia Kosari, and Lee White. "Raven-II: an open platform for surgical robotics research." IEEE Transactions on Biomedical Engineering 60, no. 4 (2012): 954-959.
+https://scholar.google.com/scholar?cites=648576181110443382&as_sdt=2005&sciodt=0,5&hl=en
+https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=22a96003b9fe8da300f1b487fb48ed532b564690
+
+
+@misc{mops-repo,
     author  = "",
-    title   = "MITK: ",
+    title   = "MOPS: A Modular and Open Platform for Surgical Robotics Research",
     year    = "",
-    journal = "",
     volume  = "",
     number  = "",
     pages   = "",
-    url     = "https://github.com/MITK/MITK"
+    publisher = {GitLab},
+    journal = {GitLab repository},
+    howpublished = {\url{https://gitlab.com/sdurobotics/medical/mops/mops_core}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD-3}
 }
 
-@article{itk-repo,
+
+
+@misc{itk-repo,
     author  = "",
-    title   = "ITK: ",
+    title   = "Insight Toolkit (ITK) -- Official Repository. ITK builds on a proven, spatially-oriented architecture for processing, segmentation, and registration of scientific images in two, three, or more dimensions.",
     year    = "",
-    journal = "",
     volume  = "",
     number  = "",
     pages   = "",
-    url     = "https://github.com/InsightSoftwareConsortium/ITK"
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/InsightSoftwareConsortium/ITK}},
+    note = {Accessed on 23.10.2023},
+    license = {Apache 2.0}
 }
 
-@article{vtk-repo,
+
+@incollection{ITK:yoo2002engineering,
+  title={Engineering and algorithm design for an image processing API: a technical report on ITK-the insight toolkit},
+  author={Yoo, Terry S and Ackerman, Michael J and Lorensen, William E and Schroeder, Will and Chalana, Vikram and Aylward, Stephen and Metaxas, Dimitris and Whitaker, Ross},
+  booktitle={Medicine Meets Virtual Reality 02/10},
+  pages={586--592},
+  year={2002},
+  publisher={IOS press}
+}
+https://scholar.google.com/scholar?cites=10830740755452103531&as_sdt=2005&sciodt=0,5&hl=en
+https://core.ac.uk/download/pdf/82872901.pdf 
+
+
+@article{ITK:mccormick2014,
+  title={ITK: enabling reproducible research and open science},
+  author={McCormick, Matthew and Liu, Xiaoxiao and Jomier, Julien and Marion, Charles and Ibanez, Luis},
+  journal={Frontiers in neuroinformatics},
+  volume={8},
+  pages={13},
+  year={2014},
+  publisher={Frontiers Media SA}
+}
+https://scholar.google.com/scholar?cites=9631889595207113952&as_sdt=2005&sciodt=0,5&hl=en
+
+
+@misc{vtk-repo,
     author  = "",
-    title   = "VTK: ",
+    title   = "VTK: Visualization Toolkit",
     year    = "",
-    journal = "",
     volume  = "",
     number  = "",
     pages   = "",
-    url     = "https://gitlab.kitware.com/vtk/vtk"
+    publisher = {GitLab},
+    journal = {GitLab repository},
+    howpublished = {\url{https://gitlab.kitware.com/vtk/vtk}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD-3}
 }
 % https://gitlab.kitware.com/vtk/vtk-examples
 % https://github.com/kitware/vtk-js
 
 
-@article{plus-repo,
-    author  = "",
-    title   = "PlusLib: ",
-    year    = "",
-    journal = "",
-    volume  = "",
-    number  = "",
-    pages   = "",
-    url     = "https://github.com/PlusToolkit/PlusLib"
+@inproceedings{VTK:schroeder1996design,
+  title={The design and implementation of an object-oriented toolkit for 3D graphics and visualization},
+  booktitle={Proceedings of Seventh Annual IEEE Visualization'96},
+  pages={93--100},
+  year={1996},
+  organization={IEEE}
 }
 
-@article{fast-repo,
+
+
+@misc{custusX-repo,
     author  = "",
-    title   = "FAST: ",
+    title   = "Research Platform for Image-Guided Therapy",
     year    = "",
-    journal = "",
     volume  = "",
     number  = "",
     pages   = "",
-    url     = "https://github.com/smistad/FAST"
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/SINTEFMedtek/CustusX}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD-3}
 }
 
-@article{slicer-repo,
+
+
+
+
+@misc{plus-repo,
     author  = "",
-    title   = "3D Slicer",
+    title   = "PlusLib: Software library for data acquisition, pre-processing, and calibration for navigated image-guided interventions.",
     year    = "",
-    journal = "",
     volume  = "",
     number  = "",
     pages   = "",
-    url     = "https://github.com/ddSlicer/Slicer"
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/PlusToolkit/PlusLib}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD-3}
 }
 
-@article{scikitsurgery-repo,
+@misc{fast-repo,
     author  = "",
-    title   = "Scikit-Surgery Repository",
+    title   = "FAST: A framework for high-performance medical image processing, neural network inference and visualization ",
     year    = "",
-    journal = "",
     volume  = "",
     number  = "",
     pages   = "",
-    url     = "https://github.com/SciKit-Surgery/scikit-surgery"
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/smistad/FAST}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD-2}
+}
+
+@misc{mitk-repo,
+    author  = "",
+    title   = "MITK: The Medical Imaging Interaction Toolkit.",
+    year    = "",
+    volume  = "",
+    number  = "",
+    pages   = "",
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/MITK/MITK}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD-3}
+}
+
+@misc{slicer-repo,
+    author  = "",
+    title   = "3D Slicer: Multi-platform, free open source software for visualization and image computing.",
+    year    = "",
+    volume  = "",
+    number  = "",
+    pages   = "",
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/Slicer/Slicer}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD}
+}
+
+@misc{scikitsurgery-repo,
+    author  = "",
+    title   = "SciKit-Surgery - Compact Libraries for Surgical Navigation",
+    year    = "",
+    volume  = "",
+    number  = "",
+    pages   = "",
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    howpublished = {\url{https://github.com/SciKit-Surgery/scikit-surgery}},
+    note = {Accessed on 23.10.2023},
+    license = {BSD}
 }
 https://github.com/SciKit-Surgery/scikit-surgery
 /commit/9aebf5a8cf687de4e55014914bf4c41fca7c014b
-
-
 
 
 @article{greenwade93,
