--- a/latex/references.bib
+++ b/latex/references.bib
@@ -6,6 +6,39 @@ Hannaford, Blake, Jacob Rosen, Diana W. Friedman, Hawkeye King, Phillip Roan, Le
 https://scholar.google.com/scholar?cites=648576181110443382&as_sdt=2005&sciodt=0,5&hl=en
 https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=22a96003b9fe8da300f1b487fb48ed532b564690
 
+@online{numfocus,
+  author = "",
+  title = "Small Development Grants",
+  year = "",
+  howpublished = {\url{https://numfocus.org/programs/small-development-grants}},
+  note = {Accessed on 24.10.2023},
+}
+
+@misc{ozdemir_2023_8337480,
+  author       = {Ozdemir, Yagmur Idil and
+                  Xochicale, Miguel and
+                  Thompson, Stephen},
+  title        = {{How to use and contribute to a software 
+                   sustainability dashboard}},
+  month        = sep,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {1.0},
+}
+
+
+@software{druskat_2022_7034163,
+  author       = {Druskat, Stephan and
+                  Krause, Thomas and
+                  Lachenmaier, Clara and
+                  Bunzeck, Bastian},
+  title        = {Hexatomic},
+  month        = aug,
+  year         = 2022,
+  publisher    = {Zenodo},
+  version      = {1.0.1},
+}
+
 
 @misc{mops-repo,
     author  = "",
@@ -299,6 +332,11 @@ issn={1861-6429},
 doi={10.1007/s11548-015-1158-5},
 url={https://doi.org/10.1007/s11548-015-1158-5}
 }
+GOOGLE_CITATINS 
+https://scholar.google.com/scholar?cites=11848185869192802869&as_sdt=2005&sciodt=0,5&hl=en
+PDF 
+https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=cebfac8519ce4112c073b11ebec21bea4e8f042b
+
 
 
 @article{imran2019software,
@@ -355,7 +393,8 @@ GOOGLE-CITATIONS: https://scholar.google.com/scholar?cites=11005789949330821723&
 }
 GOOGLE-CITATIONS:
 https://scholar.google.com/scholar?cites=3041379570921115661&as_sdt=2005&sciodt=0,5&hl=en
-
+PDF 
+https://findresearcher.sdu.dk/ws/portalfiles/portal/194159713/Schwaner2021_MOPS.pdf 
 
 
 @Article{munozferrandis2022-open-sourcing-ai,
